--- a/default.hbs
+++ b/default.hbs
@@ -12,7 +12,7 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{{asset "styles/prism.css"}}" />
 
-    <script src="#"></script> <!-- Typekit config here -->
+    <script src="//use.typekit.net/yux8irs.js"></script>
     <script>try{Typekit.load();}catch(e){}</script>
 
     {{ghost_head}}
@@ -43,9 +43,9 @@
             <a href="#" id="showEmail" >Join our email newsletter <i class="fa fa-envelope-o"></i></a>
 
                
-                        <form action="#" method="post"> <!-- Your createsend link here -->
+                        <form action="//cloud66.us2.list-manage.com/subscribe/post?u=c235c9b1e4e61d7d48c7b7d5b&amp;id=7866df9b34" method="post">
                             <div class="input-group">
-                                <input class="form-control" input="" id="fieldEmail" name="cm-ngby-ngby" type="email" required="" placeholder="Email Address">  <!-- You may need to change the name attribute -->
+                                <input class="form-control" input="" id="fieldEmail" name="EMAIL" type="email" required="" placeholder="Email Address">
                                 <div class="input-group-btn">
                                     <button class="btn btn-default colored" type="submit">Sign Up Now</button>
                                 </div>
