featured and notes

--- a/default.hbs
+++ b/default.hbs
@@ -20,22 +20,21 @@
 <body class="{{body_class}}">
     <sidebar>
         <a href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="Blog Logo"/></a>
-
-        
-        {{!-- <div>
-            <h4>Recomended Notes</h4>
+        <div>
+            <h2>Easy Ops built for Devs</h2>
+            <p>Full production toolset to run and manage containers on your servers</p>
+        </div>
+        <div>
+            <h4>Featured Notes</h4>
             {{#foreach all}}
                 {{this}}
             {{/foreach}}
-        </div> --}}
+        </div>
         
-        {{!-- <div>
+        <div>
             <h4>Topics</h4>
-            <a href="/tag/design/">Design</a>
-            <a href="/tag/development/">Development</a>
-            <a href="/tag/startups/">Startups</a>
-            <a href="/tag/strategy/">Stratergy</a>
-        </div> --}}
+            <a href="/tag/software-economy/">On Software Economy</a>
+        </div>
 
         <div>
             <h4>Subscribe</h4>
