--- a/default.hbs
+++ b/default.hbs
@@ -25,11 +25,11 @@
             <p>Full production toolset to run and manage containers on your servers</p>
         </div>
         <div>
-            <h4>Featured Notes</h4>
+            {{!--<h4>Featured Notes</h4>
             {{#foreach all}}
                 {{this}}
             {{/foreach}}
-        </div>
+        </div>--}}
         
         <div>
             <h4>Topics</h4>
