--- a/post.hbs
+++ b/post.hbs
@@ -37,10 +37,10 @@
 
 
         <div class="sign-up">
-            <form action="#" method="post"> <!-- Your createsend link here -->
+            <form action="//cloud66.us2.list-manage.com/subscribe/post?u=c235c9b1e4e61d7d48c7b7d5b&amp;id=9a8a993f85" method="post"> 
                 <h4>Sign up to hear more!</h4>
                 <div class="input-group">
-                    <input class="form-control" input="" id="fieldEmail" name="cm-ngby-ngby" type="email" required="" placeholder="Email Address"> <!-- You may need to change the name attribute -->
+                    <input class="form-control" input="" id="fieldEmail" name="EMAIL" type="email" required="" placeholder="Email Address">
                     <div class="input-group-btn">
                         <button class="btn btn-default colored" type="submit">Sign Up Now</button>
                     </div>
