--- a/default.hbs
+++ b/default.hbs
@@ -28,6 +28,7 @@
         <div>
             <h4>Topics</h4>
             <a href="/tag/software-economy/">On Software Economy</a>
+            <a href="/tag/software-economy/">Changelog</a>
         </div>
 
         <div>
