--- a/default.hbs
+++ b/default.hbs
@@ -29,6 +29,7 @@
             <h4>Topics</h4>
             <a href="/tag/software-economy/">On Software Economy</a>
             <a href="/tag/changelog/">Changelog</a>
+            <a href="/tag/docker/">Docker</a>
         </div>
 
         <div>
