link from logo to the main site

--- a/default.hbs
+++ b/default.hbs
@@ -19,7 +19,7 @@
 </head>
 <body class="{{body_class}}">
     <sidebar>
-        <a href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="Blog Logo"/></a>
+        <a href="http://www.cloud66.com"><img src="{{@blog.logo}}" alt="Blog Logo"/></a>
         <div>
             <h2>Easy Ops built for Devs</h2>
             <p>Full production toolset to run and manage containers on your servers</p>
