--- a/default.hbs
+++ b/default.hbs
@@ -56,7 +56,7 @@
         <!-- Everything else gets inserted here-->
         {{{body}}}
         <header class="copyright">
-            <div>All content copyright <a href="{{@blog.url}}/">{{@blog.title}}</a> &copy; {{date format="YYYY"}} &bull; All rights reserved.</div>
+            <div>All content copyright <a href="http://www.cloud66.com">{{@blog.title}}</a> &copy; {{date format="YYYY"}} &bull; All rights reserved.</div>
         </header>
     </main> 
 
