link to main site

--- a/index.hbs
+++ b/index.hbs
@@ -1,7 +1,7 @@
 {{!< default}}
 
 <header>
-    <span><a href="{{@blog.url}}/">{{@blog.title}}</a></span>
+    <span><a href="http://www.cloud66.com">{{@blog.title}}</a></span>
 </header>
 
 
