--- a/assets/styles/screen.css
+++ b/assets/styles/screen.css
@@ -5,18 +5,18 @@ Hoist Notes theme, created by Eliot Slevin at Hoist.io
 1 - Colors and Mixins
 2 - Basic Layout
 3 - Compressed Sidebar and layout
-4 -	Article Typography and Elements
-5 -	Sidebar content styling
-6 -	Page header structure and styling
-7 -	Post list styling
-8 -	Footer 
+4 - Article Typography and Elements
+5 - Sidebar content styling
+6 - Page header structure and styling
+7 - Post list styling
+8 - Footer 
 
 */
 /*============================================================
-1	Colors and Mixins
+1 Colors and Mixins
 ============================================================*/
 /*============================================================
-2	Basic Layout
+2 Basic Layout
 ============================================================*/
 html {
   background-color: #f2f2f2;
@@ -44,7 +44,7 @@ main {
       /*margin-left: 400px;*/ } }
 
 /*============================================================
-3	Compressed sidebar layout
+3 Compressed sidebar layout
 ============================================================*/
 @media screen and (max-width: 1000px) {
   sidebar {
@@ -70,7 +70,7 @@ main {
     margin-right: -2rem !important;
     width: calc(100% + 2rem + 2rem) !important; } }
 /*============================================================
-4	Article Typography and Elements
+4 Article Typography and Elements
 ============================================================*/
 h1, h2, h3, h4 {
   font-family: "proxima-nova", sans-serif;
@@ -80,7 +80,7 @@ h1 {
   font-size: 40px;
   font-weight: 800;
   margin-top: 3.75rem;
-  margin-bottom: 3.75rem; }
+  margin-bottom: 1.75rem; }
 
 p, ul, ol, li, blockquote {
   font-family: "expo-serif-pro", serif;
@@ -138,7 +138,7 @@ a:hover {
     display: block; }
 
 /*============================================================
-5	Sidebar content styling
+5 Sidebar content styling
 ============================================================*/
 sidebar img {
   margin-left: auto;
@@ -203,7 +203,7 @@ sidebar .input-group {
     padding: 0px; }
 
 /*============================================================
-6	Page header structure and styling
+6 Page header structure and styling
 ============================================================*/
 header {
   background-color: #f2f2f2;
@@ -254,7 +254,7 @@ header {
       font-family: "proxima-nova", sans-serif; }
 
 /*============================================================
-7	Post list styling
+7 Post list styling
 ============================================================*/
 .profileimage {
   width: 24px;
@@ -275,7 +275,7 @@ article.post {
   color: rgba(0, 0, 0, 0.5); }
 
 /*============================================================
-8	Footer 
+8 Footer 
 ============================================================*/
 nav {
   padding-bottom: 3.75rem;
@@ -395,11 +395,18 @@ nav {
 
 .full-post {
   border-bottom: 0px !important;
-  margin-bottom: 0px	!important;
-  padding-bottom: 0px	!important; }
+  margin-bottom: 0px  !important;
+  padding-bottom: 0px !important; }
 
 /*============================================================
-9	Mobile Responsive Styles
+9 Social Sharing
+============================================================*/
+.social-share {
+  margin-bottom: 2rem;
+}
+
+/*============================================================
+10  Mobile Responsive Styles
 ============================================================*/
 @media screen and (max-width: 800px) {
   sidebar {
