--- a/default.hbs
+++ b/default.hbs
@@ -15,6 +15,9 @@
     <script src="//use.typekit.net/yux8irs.js"></script>
     <script>try{Typekit.load();}catch(e){}</script>
 
+    <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+    <script type="text/javascript">stLight.options({publisher: "b29322f7-d12f-4444-8790-dd1ac6916076", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
+
     {{ghost_head}}
 </head>
 <body class="{{body_class}}">
@@ -34,9 +37,9 @@
 
         <div>
             <h4>Subscribe</h4>
+            <span class='st_twitterfollow_hcount' displayText='Follow Cloud 66' st_username='cloud66'></span>
             <a href="/rss">RSS <i class="fa fa-rss"></i></a>
             <a href="#" id="showEmail" >Join our email newsletter <i class="fa fa-envelope-o"></i></a>
-
                
                         <form action="//cloud66.us2.list-manage.com/subscribe/post?u=c235c9b1e4e61d7d48c7b7d5b&amp;id=9a8a993f85" method="post">
                             <div class="input-group">
@@ -47,8 +50,7 @@
                             </div>
                         </form>
                       
-        </div>
-        
+        </div>        
 
     </sidebar>
 
