--- a/post.hbs
+++ b/post.hbs
@@ -10,9 +10,21 @@
 <article class="{{post_class}} full-post">
 
 <h1 class="post-title">{{{title}}}</h1>
+
+<section class="social-share">
+    <span class='st_facebook_hcount' displayText='Facebook'></span>
+    <span class='st_twitter_hcount' displayText='Tweet'></span>
+    <span class='st_linkedin_hcount' displayText='LinkedIn'></span>
+</section>
     
 <section class="post-content">
         {{content}}
+</section>
+
+<section class="social-share">
+    <span class='st_facebook_hcount' displayText='Facebook'></span>
+    <span class='st_twitter_hcount' displayText='Tweet'></span>
+    <span class='st_linkedin_hcount' displayText='LinkedIn'></span>
 </section>
 
 <footer class="post-footer">
