--- a/default.hbs
+++ b/default.hbs
@@ -14,10 +14,7 @@
 
     <script src="//use.typekit.net/yux8irs.js"></script>
     <script>try{Typekit.load();}catch(e){}</script>
-
-    <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
-    <script type="text/javascript">stLight.options({publisher: "b29322f7-d12f-4444-8790-dd1ac6916076", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
-
+    
     {{ghost_head}}
 </head>
 <body class="{{body_class}}">
@@ -37,18 +34,17 @@
 
         <div>
             <h4>Subscribe</h4>
-            <span class='st_twitterfollow_hcount' displayText='Follow Cloud 66' st_username='cloud66'></span>
-            <a href="/rss">RSS <i class="fa fa-rss"></i></a>
-            <a href="#" id="showEmail" >Join our email newsletter <i class="fa fa-envelope-o"></i></a>
-               
-                        <form action="//cloud66.us2.list-manage.com/subscribe/post?u=c235c9b1e4e61d7d48c7b7d5b&amp;id=9a8a993f85" method="post">
-                            <div class="input-group">
-                                <input class="form-control" input="" id="fieldEmail" name="EMAIL" type="email" required="" placeholder="Email Address">
-                                <div class="input-group-btn">
-                                    <button class="btn btn-default colored" type="submit">Sign Up Now</button>
-                                </div>
-                            </div>
-                        </form>
+            <a href="https://twitter.com/cloud66" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @cloud66</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+            <a href="#" id="showEmail" >Join our email newsletter <i class="fa fa-envelope-o"></i></a>   
+            <form action="//cloud66.us2.list-manage.com/subscribe/post?u=c235c9b1e4e61d7d48c7b7d5b&amp;id=9a8a993f85" method="post">
+                <div class="input-group">
+                    <input class="form-control" input="" id="fieldEmail" name="EMAIL" type="email" required="" placeholder="Email Address">
+                    <div class="input-group-btn">
+                        <button class="btn btn-default colored" type="submit">Sign Up Now</button>
+                    </div>
+                </div>
+            </form>
                       
         </div>        
 
@@ -73,6 +69,8 @@
     <script type="text/javascript" src="{{asset "js/jquery.fitvids.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/index.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/prism.js"}}"></script>
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5575770943d2fea7" async="async"></script>
+
    
     <!--Google Analytics-->
     <script>
