--- a/post.hbs
+++ b/post.hbs
@@ -11,20 +11,16 @@
 
 <h1 class="post-title">{{{title}}}</h1>
 
-<section class="social-share">
-    <span class='st_facebook_hcount' displayText='Facebook'></span>
-    <span class='st_twitter_hcount' displayText='Tweet'></span>
-    <span class='st_linkedin_hcount' displayText='LinkedIn'></span>
+<section class="social-links">
+  <div class="addthis_sharing_toolbox"></div>
 </section>
-    
+
 <section class="post-content">
         {{content}}
 </section>
 
-<section class="social-share">
-    <span class='st_facebook_hcount' displayText='Facebook'></span>
-    <span class='st_twitter_hcount' displayText='Tweet'></span>
-    <span class='st_linkedin_hcount' displayText='LinkedIn'></span>
+<section class="social-links">
+  <div class="addthis_sharing_toolbox"></div>
 </section>
 
 <footer class="post-footer">
