--- a/default.hbs
+++ b/default.hbs
@@ -30,6 +30,7 @@
             <a href="/tag/software-economy/">On Software Economy</a>
             <a href="/tag/changelog/">Changelog</a>
             <a href="/tag/docker/">Docker</a>
+            <a href="/tag/customer-study/">Customer Study</a>
         </div>
 
         <div>
